# qgpy

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  qg.py  setup.sh
config/: config.yaml  delphes_card_ATLAS.tcl
cpp/: generate.cc
scripts/: test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py
src/qgpy/: configuration.py  convert.py  generate.py  submit.py  utils.py
