[project]
name = "qgpy"
version = "0.1.0"
description = "Python package to generate MC events and prepare them in a format useful for AI training."
authors = [{ name = "Vojtech Pleskot", email = "vojtech.pleskot@cern.ch" }]
license = { text = "MIT" }
dependencies = [
    "hydra-core==1.3.2",
    "uproot==5.6.4",
    "tensorflow-cpu==2.19.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
